--- a/Properties/TerminalSettings.settings
+++ b/Properties/TerminalSettings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TerminalMonitor.Properties" GeneratedClassName="TerminalSettings">
   <Profiles />
   <Settings>
-    <Setting Name="Fields" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="GridViewColumns" Type="System.String" Scope="User">
+      <Value Profile="(Default)">{}</Value>
     </Setting>
   </Settings>
 </SettingsFile>
