--- a/TerminalMonitor.csproj
+++ b/TerminalMonitor.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <VersionPrefix>1.5.0</VersionPrefix>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <VersionPrefix>1.6.0</VersionPrefix>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>TerminalMonitor.ico</ApplicationIcon>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
